@@ -54,8 +54,11 @@ SimGrid (3.6) unstable; urgency=low
    NULL-terminated array. This may solve backward compatibility issues
    due to the change to return type of SD_Simulate. See also:
    http://lists.gforge.inria.fr/pipermail/simgrid-user/2010-December/002206.html
- * Add new logging macros, with variable number of arguments. Define
-   XBT_USE_DEPRECATED if you want to use the old macros INFO1, INFO2, etc.
+ * Add new macros with variable number of arguments.
+   - in xbt/log.h: XBT_DEBUG, XBT_VERB, XBT_INFO, etc.
+   - in xbt/cunit.h: xbt_test_{add,fail,assert,log}
+   Define XBT_USE_DEPRECATED if you want to use the old numbered macros like
+   INFO1, INFO2, etc.
  * Change xbt_die() to accept a format string with arguments, just like printf.
 
  INSTR
